<resources>
    <string name="app_name">movie_app</string>
    <string name="movie_poster">movie_poster</string>
    <string name="rating">rating</string>
    <string name="starring">Starring </string>
    <string name="cast">Cast </string>
    <string name="running_time">Running time </string>
    <string name="seat_icon" />
    <string name="book_now">BOOK NOW</string>
    <string name="seats_remaining">seats remaining</string>
    <string name="select_seats_text"> Select Seat </string>
    <string name="minus_icon" />
    <string name="_0">0</string>
    <string name="add_icon" />
    <string name="filling_fast_text" />
</resources>