<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="12dp">

    <ImageView
        android:id="@+id/movie_image_details"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/movie_poster" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/movie_title_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_condensed_bold"
            android:textColor="#ffbf00"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/movie_rating_image_detail"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:baselineAligned="false"
            android:contentDescription="@string/rating" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starring"
            android:fontFamily="@font/roboto_condensed_bold"
            android:textSize="14sp"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:id="@+id/movie_cast_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_condensed_regular"
            android:textSize="14sp"
            android:layout_marginEnd="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/running_time"
            android:fontFamily="@font/roboto_condensed_bold"
            android:textSize="14sp"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:id="@+id/movie_running_time_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_condensed_regular"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/movie_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/roboto_condensed_regular" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/seats_text_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_condensed_regular"
            android:textSize="16sp"
            android:textColor="#ffffff"
            android:text="@string/select_seats_text"
            android:paddingEnd="10dp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/minus_icon_detail"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/minus_icon"
            android:src="@drawable/minus"
            android:padding="5dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/seats_selected_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:textSize="16sp"
            android:textColor="#ffffff"
            android:text="0"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/add_icon_detail"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/add_icon"
            android:src="@drawable/add"
            android:padding="5dp"
            tools:ignore="RtlSymmetry" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/seat_icon"
            android:src="@drawable/seat" />

        <TextView
            android:id="@+id/movie_seats_remaining_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_condensed_regular"
            android:paddingStart="5dp"
            android:text="@string/seats_remaining"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>
</LinearLayout>