<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="12dp">

    <ImageView
        android:id="@+id/movie_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/movie_poster" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_condensed_bold"
            android:textColor="#ffbf00"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/movie_rating_image"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:baselineAligned="false"
            android:contentDescription="@string/rating" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starring"
            android:fontFamily="@font/roboto_condensed_bold"
            android:textSize="14sp"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:id="@+id/movie_cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_condensed_regular"
            android:textSize="14sp"
            android:layout_marginEnd="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/running_time"
            android:fontFamily="@font/roboto_condensed_bold"
            android:textSize="14sp"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:id="@+id/movie_running_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_condensed_regular"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/seat_icon"
            android:src="@drawable/seat" />

        <TextView
            android:id="@+id/movie_seats_remaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_condensed_regular"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_condensed_regular"
            android:paddingStart="5dp"
            android:text="@string/seats_remaining"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>


</LinearLayout>